cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 17)

project(wolf)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
add_subdirectory("lib/glfw-3.4")
find_package(OpenGL REQUIRED)

file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable("${CMAKE_PROJECT_NAME}")

target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC GLFW_INCLUDE_NONE=1) 
target_sources("${CMAKE_PROJECT_NAME}" PRIVATE ${MY_SOURCES} )
target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glfw OpenGL::GL)